k8s/cadastrocliente-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cadastrocliente
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cadastrocliente
  template:
    metadata:
      labels:
        app: cadastrocliente
    spec:
      containers:
        - name: cadastrocliente
          image: southamerica-east1-docker.pkg.dev/viratech-1010-508115/cadastrocliente-api-repo/cadastrocliente-app:v1
          ports:
            - containerPort: 8081

          volumeMounts:
            - name: logs
              mountPath: /app/logs

          readinessProbe:
            httpGet:
              path: /actuator/health # Rota da API que responde com status 200 OK
              port: 8081
            initialDelaySeconds: 35
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi

      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: cadastrocliente-logs-pvc
