k8s/cadastrocliente-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadastrocliente
spec:
  selector:
    app: cadastrocliente
  ports:
    - port: 80
      targetPort: 8081
  type: NodePort
#  type: LoadBalancer
