k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    networking.gke.io/managed-certificates: "app-ssl-certificate"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: cadastrocliente.duckdns.org
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: cadastrocliente-frontend
                port:
                  number: 80
    - host: cadastrocliente-api.duckdns.org
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: cadastrocliente
                port:
                  number: 8081
